[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycomms"
authors = [
    {name = "Dan Izadi", email = "dajizadi@gmail.com"},
]
description = "Python network communcation abstractions."
readme = "README.md"
requires-python = ">=3.7"
